--- a/form_for_decay_function.ipynb
+++ b/form_for_decay_function.ipynb
@@ -13,7 +13,7 @@
    "metadata": {},
    "source": [
     "# Response\n",
-    "It's true that the exponential functions need to be modified not to exceed one for $t<0$, but this is true of the the suggested revised form as well. If the expoentials are suitably set, the fit can be applied over the whole function -- which we agree is desirable. \n",
+    "It's true that the exponential functions needs to be modified not to exceed one for $t<0$, but this is true of the the suggested revised form as well. If the expoentials are suitably set, the fit can be applied over the whole function -- which we agree is desirable and which we do already. \n",
     "\n",
     "Our view is the decay is time-resolution-limited and I think time zero was indeed not set so well in earlier drafts. We have now corrected time zero in the draft. We also corrected a bad typo on our part where we had a missing minus sign in the erf function.  \n",
     "\n",
@@ -57,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In the email the suggested form is  \n",
+    "In the email, the suggested form is  \n",
     "$I(t) = I_0 + \\frac{1}{2} (1+\\text{erf}(t))(A*\\exp(-t/t_{mag})+C(1-\\exp(-t/t_{mag})) + B*\\sin…)$\n",
     "\n",
     "Below this is evaluated having relabeled the two $t_{mag}$ terms to $t_{mag1}$ and $t_{mag2}$. The functional form is an increasing (not decreasing) blurred step, which is not what we want. We've left out the $\\sin$ term for simplicity. "
