--- a/form_for_decay_function.ipynb
+++ b/form_for_decay_function.ipynb
@@ -60,18 +60,22 @@
     "In the email, the suggested form is  \n",
     "$I(t) = I_0 + \\frac{1}{2} (1+\\text{erf}(t))(A*\\exp(-t/t_{mag})+C(1-\\exp(-t/t_{mag})) + B*\\sin…)$\n",
     "\n",
-    "Below this is evaluated having relabeled the two $t_{mag}$ terms to $t_{mag1}$ and $t_{mag2}$. The functional form is an increasing (not decreasing) blurred step, which is not what we want. We've left out the $\\sin$ term for simplicity. "
+    "Below this is evaluated having relabeled the two $t_{mag}$ terms to $t_{mag1}$ and $t_{mag2}$ (We've left out the $\\sin$ term for simplicity. ).\n",
+    "\n",
+    "The functional form is an increasing (not decreasing) blurred step, which is not what we want. I checked and this form is closeish (but not the same) to the convolution between an exponential and a gaussian. See [here](http://www.np.ph.bham.ac.uk/research_resources/programs/halflife/gauss_exp_conv.pdf). \n",
+    "\n",
+    "Another issue is apparent if you take the case of small $t_{mag1}$ and big $t_{erf}$ relevant to us. We expect this to look quite close to the error function, but the form is actually very asymetric. This is becuase it's the convolution of a real expoential with a divergence for negative t. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5d867744f8f2450382fa9a156652ebb5",
+       "model_id": "567d124249d54f3ebe60db8d926f8bb0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -85,7 +89,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fdff0cf075fa400399f32e0e6cb8ceef",
+       "model_id": "75776b09e9a4403288c2a15f8431ef64",
        "version_major": 2,
        "version_minor": 0
       },
@@ -102,13 +106,13 @@
        "<function __main__.plot_revised_form(I_0=1.0, t_erf=0.15, A=0.5, C=0.2, t_mag1=0.5, t_mag2=5)>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "t = np.linspace(-3, 100, 1000)\n",
+    "t = np.linspace(-3, 100, 5000)\n",
     "\n",
     "def exp(x):\n",
     "    y = np.exp(x)\n",
@@ -136,13 +140,12 @@
     "    art.set_ydata(t*0 + I)\n",
     "    fig.canvas.draw()\n",
     "\n",
-    "#interact(plot_revised_form)\n",
     "interact(plot_revised_form,\n",
     "         I0=FloatSlider(value=1, min=0, max=2),\n",
-    "         t_erf=FloatSlider(value=0.15, min=0, max=1),\n",
+    "         t_erf=FloatSlider(value=0.15, min=0, max=3, step=0.01),\n",
     "         A=FloatSlider(value=.2, min=0, max=1),\n",
     "         C=FloatSlider(value=.2, min=0, max=1),\n",
-    "         t_mag1=FloatSlider(value=.5, min=0, max=5),\n",
+    "         t_mag1=FloatSlider(value=.5, min=0, max=5, step=0.01),\n",
     "         t_mag2=FloatSlider(value=5, min=0, max=50)\n",
     "        )"
    ]
@@ -151,7 +154,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The wrong sign in the erf is most likely propogating from an error we made in an earlier draft. Sorry about this. Changing erf(t) to erf(-t) cannot be done in the proposed form as it multiplies the $C(1-exp(-t/t_{mag})$) term in the original bracket placing. We therefore think you likely meant to put the bracket such that the error functional only multiplies the $A$ term as:\n",
+    "One thing I checked is trying to reverse the error function erf(t) to erf(-t) so that the step is a drop not an increase. This cannot be done in the proposed form as it multiplies the $C(1-exp(-t/t_{mag})$) term in the original bracket placing. We therefore put the bracket such that the error function only multiplies the $A$ term as:\n",
     "\n",
     "$I(t) = I_0 + \\frac{1}{2} (1+\\text{erf}(-t))(A*\\exp(-t/t_{mag}))+C(1-\\exp(-t/t_{mag}) + B*\\sin…)$\n",
     "\n",
@@ -160,48 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8c06a383174b42a990f08fbf7c1ac9a7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a1f6ab799cd4c8b871010be3ad23bd7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, description='I_0', max=3.0, min=-1.0), FloatSlider(value=0.15, de…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.plot_revised_form(I_0=1.0, t_erf=0.15, A=0.5, C=0.2, t_mag1=0.5, t_mag2=5)>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "t = np.linspace(-3, 100, 1000)\n",
     "\n",
@@ -237,7 +201,7 @@
     "         t_erf=FloatSlider(value=0.15, min=0, max=1),\n",
     "         A=FloatSlider(value=.2, min=0, max=1),\n",
     "         C=FloatSlider(value=.2, min=0, max=1),\n",
-    "         t_mag1=FloatSlider(value=.5, min=0, max=5),\n",
+    "         t_mag1=FloatSlider(value=.5, min=0, max=15),\n",
     "         t_mag2=FloatSlider(value=5, min=0, max=50)\n",
     "        )"
    ]
@@ -246,7 +210,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This has an appropriate shape, but there is an issue. The error function derives from a convolution of a Gaussian $\\exp(-t^2)$ form. When multiplied with the $\\exp(-t)$ type decay the erf term will always limit the maximum width of the drop even if $t_{mag1}$ is made large. This can be seem by playing with the parameteres above. "
+    "This has an appropriate shape, but there is an issue similar to that above. The error function derives from a convolution of a Gaussian $\\exp(-t^2)$ form. When multiplied with the $\\exp(-t)$ type decay the erf term will always limit the maximum width of the drop even if $t_{mag1}$ is made large. This can be seem by playing with the parameteres above. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we want to put a exponential decay (but fixed to 1 at t<1) together with time resolution, I think it would be best to remove the error function entirely and compute the convolution numerically. If this is important we can do this. \n",
+    "\n",
+    "P.S.\n",
+    "An analytical form is posisble, but it looks like it will be more trouble that it is worth. I can see that you will be able to split the integral in line (3) of this [webpage](http://www.np.ph.bham.ac.uk/research_resources/programs/halflife/gauss_exp_conv.pdf) into two terms and solve it, but the form will be pretty nastsy."
    ]
   },
   {
