--- a/form_for_decay_function.ipynb
+++ b/form_for_decay_function.ipynb
@@ -58,24 +58,25 @@
    "metadata": {},
    "source": [
     "In the email, the suggested form is  \n",
-    "$I(t) = I_0 + \\frac{1}{2} (1+\\text{erf}(t))(A*\\exp(-t/t_{mag})+C(1-\\exp(-t/t_{mag})) + B*\\sin…)$\n",
+    "$I(t) = I_0/2 + \\frac{1}{2} (1+\\text{erf}(t))(A*\\exp(-t/t_{mag})+C(1-\\exp(-t/t_{mag})) + B*\\sin…)$\n",
     "\n",
-    "Below this is evaluated having relabeled the two $t_{mag}$ terms to $t_{mag1}$ and $t_{mag2}$ (We've left out the $\\sin$ term for simplicity. ).\n",
+    "I think $I_0$ is actually more appropriate than $I_0/2$.\n",
     "\n",
-    "The functional form is an increasing (not decreasing) blurred step, which is not what we want. I checked and this form is closeish (but not the same) to the convolution between an exponential and a gaussian. See [here](http://www.np.ph.bham.ac.uk/research_resources/programs/halflife/gauss_exp_conv.pdf). \n",
+    "The functional behavior is clear if you take the $t_{erf} << t_{mag}$ limit.  \n",
     "\n",
-    "Another issue is apparent if you take the case of small $t_{mag1}$ and big $t_{erf}$ relevant to us. We expect this to look quite close to the error function, but the form is actually very asymetric. This is becuase it's the convolution of a real expoential with a divergence for negative t. "
+    "* $-A$ is the drop \n",
+    "* $-C$ is the amount of order that fails to recover  \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "567d124249d54f3ebe60db8d926f8bb0",
+       "model_id": "f5b69d17636645578b12d0df01df789a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,7 +90,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "75776b09e9a4403288c2a15f8431ef64",
+       "model_id": "dff8c283557d4b9d9677f0cd181b45a8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -103,10 +104,10 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.plot_revised_form(I_0=1.0, t_erf=0.15, A=0.5, C=0.2, t_mag1=0.5, t_mag2=5)>"
+       "<function __main__.plot_revised_form(I_0=1.0, t_erf=0.15, A=0.5, C=0.2, t_mag=5)>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,18 +120,18 @@
     "    y[y>1] = 1\n",
     "    return y\n",
     "\n",
-    "def revised_form(t, I_0, t_erf, A, C, t_mag1, t_mag2):\n",
-    "    I = I_0 + 0.5*(1+erf(t/t_erf))*(A*exp(-t/t_mag1)+C*(1-exp(-t/t_mag2)))\n",
+    "def revised_form(t, I_0, t_erf, A, C, t_mag):\n",
+    "    I = I_0 + 0.5*(1+erf(t/t_erf))*(A*exp(-t/t_mag)+C*(1-exp(-t/t_mag)))\n",
     "    \n",
     "    return I\n",
     "\n",
-    "def plot_revised_form(I_0=1., t_erf=.15, A=0.5, C=0.2, t_mag1=0.5, t_mag2=5):\n",
-    "    I = revised_form(t, I_0=I_0, t_erf=t_erf, A=A, C=C, t_mag1=t_mag1, t_mag2=t_mag2)\n",
+    "def plot_revised_form(I_0=1., t_erf=.15, A=0.5, C=0.2, t_mag=5):\n",
+    "    I = revised_form(t, I_0=I_0, t_erf=t_erf, A=A, C=C, t_mag=t_mag)\n",
     "    art.set_ydata(I)\n",
     "    fig.canvas.draw()\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "I = revised_form(t, I_0=1, t_erf=.15, A=.2, C=.2, t_mag1=.5, t_mag2=5)\n",
+    "I = revised_form(t, I_0=1, t_erf=.01, A=-.8, C=.5, t_mag=5)\n",
     "art,  = ax.plot(t, I)\n",
     "ax.set_xlabel('t')\n",
     "ax.set_ylabel('I')\n",
@@ -142,85 +143,11 @@
     "\n",
     "interact(plot_revised_form,\n",
     "         I0=FloatSlider(value=1, min=0, max=2),\n",
-    "         t_erf=FloatSlider(value=0.15, min=0, max=3, step=0.01),\n",
-    "         A=FloatSlider(value=.2, min=0, max=1),\n",
-    "         C=FloatSlider(value=.2, min=0, max=1),\n",
-    "         t_mag1=FloatSlider(value=.5, min=0, max=5, step=0.01),\n",
-    "         t_mag2=FloatSlider(value=5, min=0, max=50)\n",
+    "         t_erf=FloatSlider(value=0.15, min=0.00001, max=3, step=0.0001),\n",
+    "         A=FloatSlider(value=-.9, min=-5, max=1),\n",
+    "         C=FloatSlider(value=-.2, min=-5, max=1),\n",
+    "         t_mag=FloatSlider(value=.5, min=0, max=5, step=0.01),\n",
     "        )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "One thing I checked is trying to reverse the error function erf(t) to erf(-t) so that the step is a drop not an increase. This cannot be done in the proposed form as it multiplies the $C(1-exp(-t/t_{mag})$) term in the original bracket placing. We therefore put the bracket such that the error function only multiplies the $A$ term as:\n",
-    "\n",
-    "$I(t) = I_0 + \\frac{1}{2} (1+\\text{erf}(-t))(A*\\exp(-t/t_{mag}))+C(1-\\exp(-t/t_{mag}) + B*\\sin…)$\n",
-    "\n",
-    "Below we impliment this."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "t = np.linspace(-3, 100, 1000)\n",
-    "\n",
-    "def exp(x):\n",
-    "    y = np.exp(x)\n",
-    "    y[y>1] = 1\n",
-    "    return y\n",
-    "\n",
-    "def revised_form(t, I_0, t_erf, A, C, t_mag1, t_mag2):\n",
-    "    I = I_0 + 0.5*(1+erf(-t/t_erf))*(A*exp(-t/t_mag1))+C*(1-exp(-t/t_mag2))\n",
-    "    \n",
-    "    return I\n",
-    "\n",
-    "def plot_revised_form(I_0=1., t_erf=.15, A=0.5, C=0.2, t_mag1=0.5, t_mag2=5):\n",
-    "    I = revised_form(t, I_0=I_0, t_erf=t_erf, A=A, C=C, t_mag1=t_mag1, t_mag2=t_mag2)\n",
-    "    art.set_ydata(I)\n",
-    "    fig.canvas.draw()\n",
-    "\n",
-    "fig, ax = plt.subplots()\n",
-    "I = revised_form(t, I_0=1, t_erf=.15, A=.2, C=.2, t_mag1=.5, t_mag2=5)\n",
-    "art,  = ax.plot(t, I)\n",
-    "ax.set_xlabel('t')\n",
-    "ax.set_ylabel('I')\n",
-    "ax.set_ylim((-4, 10))\n",
-    "\n",
-    "def update(I=1):\n",
-    "    art.set_ydata(t*0 + I)\n",
-    "    fig.canvas.draw()\n",
-    "\n",
-    "#interact(plot_revised_form)\n",
-    "interact(plot_revised_form,\n",
-    "         I0=FloatSlider(value=1, min=0, max=2),\n",
-    "         t_erf=FloatSlider(value=0.15, min=0, max=1),\n",
-    "         A=FloatSlider(value=.2, min=0, max=1),\n",
-    "         C=FloatSlider(value=.2, min=0, max=1),\n",
-    "         t_mag1=FloatSlider(value=.5, min=0, max=15),\n",
-    "         t_mag2=FloatSlider(value=5, min=0, max=50)\n",
-    "        )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This has an appropriate shape, but there is an issue similar to that above. The error function derives from a convolution of a Gaussian $\\exp(-t^2)$ form. When multiplied with the $\\exp(-t)$ type decay the erf term will always limit the maximum width of the drop even if $t_{mag1}$ is made large. This can be seem by playing with the parameteres above. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "If we want to put a exponential decay (but fixed to 1 at t<1) together with time resolution, I think it would be best to remove the error function entirely and compute the convolution numerically. If this is important we can do this. \n",
-    "\n",
-    "P.S.\n",
-    "An analytical form is posisble, but it looks like it will be more trouble that it is worth. I can see that you will be able to split the integral in line (3) of this [webpage](http://www.np.ph.bham.ac.uk/research_resources/programs/halflife/gauss_exp_conv.pdf) into two terms and solve it, but the form will be pretty nastsy."
    ]
   },
   {
