on the home straight, but not finished

--- a/compare_erf_numercial_convolution.ipynb
+++ b/compare_erf_numercial_convolution.ipynb
@@ -4,22 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Comment from Simon\n",
-    "The other major concern I have is equation 1. I guess that this is only valid for t>0 ? Otherwise it explodes at negative delays. If this is the case, I don’t really see the point/reason of fitting “half” an error function. I would say an error function is something you fit when the dynamics are resolution limited (this is what we say in the text). What does this mean? It means that we should see some signal for times t<0 because of our finite blurring on the time axis. If we restrict the fit to only times >0 we are not fitting the error function correctly.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Response\n",
-    "It's true that the exponential functions needs to be modified not to exceed one for $t<0$, but this is true of the the suggested revised form as well. If the expoentials are suitably set, the fit can be applied over the whole function -- which we agree is desirable and which we do already. \n",
+    "# Check form of function\n",
+    "Here we compare the form with the error function with a numerical convolution.\n",
     "\n",
-    "Our view is the decay is time-resolution-limited and I think time zero was indeed not set so well in earlier drafts. We have now corrected time zero in the draft. We also corrected a bad typo on our part where we had a missing minus sign in the erf function.  \n",
-    "\n",
-    "We have looked at the proposed new form you sent below. I think there might be some typos? We tried a couple of modifications to try to get at what you had in mind, but we didn't have much luck. Please can you check and advise us. \n",
-    "\n",
-    "Overall, now that we've corrected time zero, and the typo in the equation, I can't see any serious issues with what we have and would be inclinded to keep it."
+    "Although there is reasonable agreement for good time resolution, the proposed form with the error function breaks down when gamma gets large. "
    ]
   },
   {
@@ -65,7 +53,9 @@
     "The functional behavior is clear if you take the $t_{erf} << t_{mag}$ limit.  \n",
     "\n",
     "* $-A$ is the drop \n",
-    "* $-C$ is the amount of order that fails to recover  \n"
+    "* $-C$ is the amount of order that fails to recover  \n",
+    "\n",
+    "We think this should be the same as "
    ]
   },
   {
@@ -76,7 +66,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cf4b8fef922b49d79cd413818bc599dd",
+       "model_id": "435268a0f5894be78b58995675ced05d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -90,7 +80,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4874e5879d549c386a78c7c9d7b88b0",
+       "model_id": "9f1393407711475f83780736a3b59926",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.plot_revised_form(I_0=1.0, t_erf=0.15, A=0.5, C=0.2, t_mag=5)>"
+       "<function __main__.plot_revised_form(I_0=1.0, Gamma=0.15, A=0.5, C=0.2, t_mag=5)>"
       ]
      },
      "execution_count": 3,
@@ -113,29 +103,47 @@
     }
    ],
    "source": [
-    "t = np.linspace(-3, 100, 5000)\n",
+    "t = np.linspace(-20, 100, 50000)\n",
     "\n",
     "def exp(x):\n",
     "    y = np.exp(x)\n",
     "    y[y>1] = 1\n",
     "    return y\n",
     "\n",
-    "def revised_form(t, I_0, t_erf, A, C, t_mag):\n",
-    "    I = I_0 + 0.5*(1+erf(t/t_erf))*(A*exp(-t/t_mag)+C*(1-exp(-t/t_mag)))\n",
-    "    \n",
+    "def revised_form(t, I_0, Gamma, A, C, t_mag):\n",
+    "    I = I_0 + 0.5*(1+erf(2*t*np.log(2)/Gamma))*(A*exp(-t/t_mag)+C*(1-exp(-t/t_mag)))\n",
     "    return I\n",
     "\n",
-    "def plot_revised_form(I_0=1., t_erf=.15, A=0.5, C=0.2, t_mag=5):\n",
-    "    I = revised_form(t, I_0=I_0, t_erf=t_erf, A=A, C=C, t_mag=t_mag)\n",
-    "    art.set_ydata(I)\n",
+    "\n",
+    "def convolution_form(t, Gamma, A, C, t_mag):\n",
+    "    dt = np.mean(np.abs(np.diff(t)))\n",
+    "    x = np.arange(-Gamma*5, Gamma*5+dt, dt)\n",
+    "    t_extended = np.arange(t.min() - 5*Gamma, t.max() + 5*Gamma, dt) \n",
+    "    kernel = np.exp(-(2*np.sqrt(np.log(2))*x/Gamma)**2)\n",
+    "    kernel = kernel / np.sum(kernel)\n",
+    "    y = (1 - A*np.heaviside(-t_extended, 1) + A*exp(-t_extended/t_mag)\n",
+    "         + C*(1-exp(-t_extended/t_mag))\n",
+    "        )\n",
+    "    I_extended = np.convolve(y, kernel, mode='same')\n",
+    "    return np.interp(t, t_extended, I_extended)\n",
+    "\n",
+    "\n",
+    "def plot_revised_form(I_0=1., Gamma=.15, A=0.5, C=0.2, t_mag=5):\n",
+    "    I = revised_form(t, I_0=I_0, Gamma=Gamma, A=A, C=C, t_mag=t_mag)\n",
+    "    art1.set_ydata(I)\n",
+    "    I = convolution_form(t, Gamma=Gamma, A=A, C=C, t_mag=t_mag)\n",
+    "    art2.set_ydata(I)\n",
     "    fig.canvas.draw()\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "I = revised_form(t, I_0=1, t_erf=.01, A=-.8, C=.5, t_mag=5)\n",
-    "art,  = ax.plot(t, I)\n",
+    "I = revised_form(t, I_0=1, Gamma=.01, A=-.8, C=.5, t_mag=5)\n",
+    "art1,  = ax.plot(t, I, label='error function form')\n",
+    "I = convolution_form(t, Gamma=.01, A=-.8, C=.5, t_mag=5)\n",
+    "art2,  = ax.plot(t, I, label='convolution function form')\n",
     "ax.set_xlabel('t')\n",
     "ax.set_ylabel('I')\n",
     "ax.set_ylim((-4, 10))\n",
+    "ax.legend()\n",
     "\n",
     "def update(I=1):\n",
     "    art.set_ydata(t*0 + I)\n",
@@ -143,10 +151,10 @@
     "\n",
     "interact(plot_revised_form,\n",
     "         I0=FloatSlider(value=1, min=0, max=2),\n",
-    "         t_erf=FloatSlider(value=0.15, min=0.00001, max=3, step=0.0001),\n",
+    "         Gamma=FloatSlider(value=0.15, min=0.00001, max=10, step=0.0001),\n",
     "         A=FloatSlider(value=-.9, min=-5, max=1),\n",
     "         C=FloatSlider(value=-.2, min=-5, max=1),\n",
-    "         t_mag=FloatSlider(value=.5, min=0, max=5, step=0.01),\n",
+    "         t_mag=FloatSlider(value=.5, min=0.0001, max=5, step=0.0001),\n",
     "        )"
    ]
   },
