proposed final form

--- a/OLD_form_for_decay_function.ipynb
+++ b/OLD_form_for_decay_function.ipynb
@@ -228,7 +228,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "This has an appropriate shape, but there is an issue similar to that above. The error function derives from a convolution of a Gaussian $\\exp(-t^2)$ form. When multiplied with the $\\exp(-t)$ type decay the erf term will always limit the maximum width of the drop even if $t_{mag1}$ is made large. This can be seem by playing with the parameteres above. \n",
+    "\n",
+    "If we want to put a exponential decay (but fixed to 1 at t<1) together with time resolution, I think it would be best to remove the error function entirely and compute the convolution numerically. If this is important we can do this. \n",
+    "\n",
+    "P.S.\n",
+    "An analytical form is posisble, but it looks like it will be more trouble that it is worth. I can see that you will be able to split the integral in line (3) of this [webpage](http://www.np.ph.bham.ac.uk/research_resources/programs/halflife/gauss_exp_conv.pdf) into two terms and solve it, but the form will be pretty nastsy."
+   ]
   }
  ],
  "metadata": {
