--- a/final_form.ipynb
+++ b/final_form.ipynb
@@ -61,7 +61,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cc071a80dc0e4e00912aa90970b53db3",
+       "model_id": "869377cb95c345ddb7bdb77a0e850223",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,7 +75,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "561000b747474c31ad34f96002542934",
+       "model_id": "8b0f98731804470795a3738595c6d6ab",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,7 +89,7 @@
     {
      "data": {
       "text/plain": [
-       "<function __main__.plot_revised_form(Gamma=0.1, A=0.9, C=0.2, t_mag=3, D=0.5, omega=0.02, t_wave=50)>"
+       "<function __main__.plot_revised_form(Gamma=0.1, A=0.9, C=0.2, t_mag=3, D=0.5, omega=0.05, t_wave=50)>"
       ]
      },
      "execution_count": 3,
@@ -146,7 +146,7 @@
     "    return np.interp(t, t_extended, I_extended)\n",
     "\n",
     "\n",
-    "def plot_revised_form(Gamma=.1, A=.9, C=.2, t_mag=3, D=.5, omega=1/50, t_wave=50):\n",
+    "def plot_revised_form(Gamma=.1, A=.9, C=.2, t_mag=3, D=.5, omega=1/20, t_wave=50):\n",
     "    I = decay(t, Gamma=Gamma, A=A, C=C, t_mag=t_mag, D=D, omega=omega, t_wave=t_wave)\n",
     "    art.set_ydata(I)\n",
     "\n",
@@ -162,8 +162,9 @@
     "         A=FloatSlider(value=.9, min=-1, max=1),\n",
     "         C=FloatSlider(value=.2, min=-1, max=1),\n",
     "         D=FloatSlider(value=.2, min=0, max=1),\n",
-    "         omega=FloatSlider(min=0, max=.1, step=0.0001),\n",
-    "         t_mag=FloatSlider(value=.5, min=0.0001, max=5, step=0.0001),\n",
+    "         omega=FloatSlider(value=1/20, min=0, max=.1, step=0.0001),\n",
+    "         t_mag=FloatSlider(value=5, min=0.0001, max=5, step=0.0001),\n",
+    "         t_wave=FloatSlider(value=50, min=0.0001, max=300, step=1),\n",
     "        )"
    ]
   },
@@ -176,48 +177,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d35201ccdc6d4b989e470e08182e66ad",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d7f2afc932da406889f32908986d45a8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=0.1, description='omega', max=0.30000000000000004, min=-0.1), FloatSli…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.update(omega=0.1, D=0.2, t_wave=100)>"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "fig, ax = plt.subplots()\n",
     "\n",
