remove Heavyside and mod of exp

--- a/final_form.ipynb
+++ b/final_form.ipynb
@@ -37,20 +37,21 @@
    "metadata": {},
    "source": [
     "We suggest   \n",
-    "$I(t) = g(t, \\Gamma) \\ast \\{ 1 + A H(-t) - A\\exp(-t/t_{mag})  - C(1-\\exp(-t/t_{mag})) + D H(t)  \\exp(-t/t_{wave})  (\\cos(\\omega t)-1)$  \\}\n",
+    "$I_\\text{decay}(t\\geq 0) = 1 - A\\exp(-t/t_{mag}) - C(1-\\exp(-t/t_{mag})) + D \\exp(-t/t_{wave})  \\sin(\\omega t)$  \n",
+    "$I_\\text{decay}(t<0) = 1$  \n",
     "\n",
-    "* $g(t, \\Gamma)$ is a Gaussian with width defined in terms of full-width at half-maximum $\\Gamma$\n",
-    "* $\\ast$ denotes a convolution, which we will do numerically\n",
-    "* $H(t)$ is the heavyside function\n",
-    "* $\\exp(-t)$ is an exponential which is set to $1$ for $t<0$.\n",
-    "* The function is always 1 for t<0 for $\\Gamma \\rightarrow 0$. Since we fit $I_{on}/I_{off}$, it \n",
     "* $t_{mag}$ is the magnetic recovery timescale\n",
-    "* $A$ is the drop for $\\Gamma \\rightarrow 0$. Not the amount the function drops. \n",
+    "* $A$ is the drop. \n",
     "* $C$ is the amount of order that fails to recover \n",
-    "* The osciallatory component is constructed to be continuous. Either a $1-\\cos$ or a $\\sin$ form is sensible. An arbitary phase just creates a discontinuity that is (confusingly!) absorbed into $A$. \n",
+    "* The osciallatory component is constructed to be continuous. Either a $\\sin$ or $1-\\cos$ form is continuous. An arbitary phase just creates a discontinuity that is (confusingly!) absorbed into $D$. Note that $sin(\\theta +\\pi) = -sin(\\theta)$. I hope that we don't need to put a phase, as this makes the form a bit confusing. Can we try to fit without a phase and \n",
     "* $\\omega$ is the frequency of the osciallatory component\n",
     "* $D$ is the magnitude of the osciallatory component\n",
-    "* $t_{wave}$ is the decay rate of the wave."
+    "* $t_{wave}$ is the decay rate of the wave.\n",
+    "\n",
+    "The experimentally measured form is  \n",
+    "$I(t) = g(t, \\Gamma) \\ast I_\\text{decay}(t)$\n",
+    "* $g(t, \\Gamma)$ is a Gaussian with width defined in terms of full-width at half-maximum $\\Gamma$\n",
+    "* $\\ast$ denotes a convolution, which we will do numerically\n"
    ]
   },
   {
@@ -61,7 +62,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "869377cb95c345ddb7bdb77a0e850223",
+       "model_id": "12ee6e2b6d2a48308cba4e4cb9cf9365",
        "version_major": 2,
        "version_minor": 0
       },
@@ -75,7 +76,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8b0f98731804470795a3738595c6d6ab",
+       "model_id": "9be0dbc41bb14af198c1e1cff291fc1c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -99,15 +100,6 @@
    ],
    "source": [
     "t = np.linspace(-20, 300, 50000)\n",
-    "\n",
-    "def exp(x):\n",
-    "    \"\"\"Exponential with a maximum of 1\"\"\"\n",
-    "    y = np.exp(x)\n",
-    "    y[y>1] = 1\n",
-    "    return y\n",
-    "\n",
-    "def H(x):\n",
-    "    return np.heaviside(x, 1)\n",
     "\n",
     "def decay(t, Gamma=.1, A=.9, C=.2, t_mag=3, D=.5, omega=1/50, t_wave=50):\n",
     "    \"\"\"Decay form \n",
@@ -137,11 +129,11 @@
     "    t_extended = np.arange(t.min() - 5*Gamma, t.max() + 5*Gamma, dt) \n",
     "    kernel = np.exp(-(2*np.sqrt(np.log(2))*x/Gamma)**2)\n",
     "    kernel = kernel / np.sum(kernel)\n",
-    "    y = (1 + A*H(-t_extended)\n",
-    "         - A*exp(-t_extended/t_mag)\n",
-    "         - C*(1-exp(-t_extended/t_mag))\n",
-    "         + H(t_extended)*D*exp(-t_extended/t_wave) * (np.cos(omega*t_extended)-1)\n",
+    "    y = (1 - A*np.exp(-t_extended/t_mag)\n",
+    "         - C*(1-np.exp(-t_extended/t_mag))\n",
+    "         + D*np.exp(-t_extended/t_wave) * np.sin(omega*t_extended)\n",
     "        )\n",
+    "    y[t_extended<0] = 1\n",
     "    I_extended = np.convolve(y, kernel, mode='same')\n",
     "    return np.interp(t, t_extended, I_extended)\n",
     "\n",
@@ -174,38 +166,6 @@
    "source": [
     "For clarify you can look a the osciallatory component"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots()\n",
-    "\n",
-    "def H(x):\n",
-    "    return np.heaviside(x, 1)\n",
-    "\n",
-    "def osc(t, omega=.1, D=.2, t_wave=100):\n",
-    "    return H(t)*D*np.exp(-t/t_wave)*(np.cos(omega*t) - 1 )\n",
-    "\n",
-    "I = osc(t)\n",
-    "art, *_  = ax.plot(t, I)\n",
-    "\n",
-    "def update(omega=.1, D=.2, t_wave=100):\n",
-    "    I = osc(t, omega=omega, D=D, t_wave=100)\n",
-    "    art.set_ydata(I)\n",
-    "\n",
-    "interact(update,\n",
-    "        phi=FloatSlider(value=.001, min=0, max=np.pi, step=0.01))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
